--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,35 +1,17 @@
 # Use Phusion base image (minimal Docker-friendly Ubuntu)
-FROM phusion/baseimage:master as base
+FROM phusion/baseimage:focal-1.2.0
 
-# Set basic variables
+# Set some variables
 ENV USER geco
 ENV HOME /home/$USER
 ENV DIR geco
 
-# Add user
-RUN useradd -m $USER -G sudo && \
-    echo "$USER:$USER" | chpasswd && \
-    echo "$USER ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
-
-# Add shared volume
-VOLUME $HOME/$DIR
-WORKDIR $HOME/$DIR
-
-# Add welcome message
-COPY Welcome $HOME/.welcome
-RUN echo "cat $HOME/.welcome" >> $HOME/.bashrc
-
-# Start bash login shell
-FROM base as dev
-ENTRYPOINT ["/bin/bash", "-l", "-c"]
-CMD ["/bin/bash", "-i"]
-
-# Change to root
-USER root
-
 # Install essential packages
-RUN apt-get update && apt-get upgrade -y && apt-get install -y \
-    apt-utils gcc g++ openssh-server cmake build-essential gdb gdbserver rsync vim pip
+RUN apt-get update
+RUN apt-get install -y locales sudo build-essential cmake pip
+
+# Clean up
+RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 # Install FEniCS
 RUN apt-get install software-properties-common
@@ -37,5 +19,19 @@ RUN add-apt-repository ppa:fenics-packages/fenics
 RUN apt-get update
 RUN apt-get install -y fenics
 
-# Change to user
+# Add user
+RUN useradd -m $USER -G sudo && \
+    echo "$USER:$USER" | chpasswd && \
+    echo "$USER ALL=(ALL) NOPASSWD: ALL" >> /etc/sudoers
 USER $USER
+
+# Create shared volume
+VOLUME $HOME/$DIR
+WORKDIR $HOME/$DIR
+
+# Generate welcome message printed at login
+COPY Welcome $HOME/.welcome
+RUN echo "cat $HOME/.welcome" >> $HOME/.bashrc
+
+# Start login shell
+CMD ["/bin/bash", "-i"]
