--- a/doc/Makefile
+++ b/doc/Makefile
@@ -20,4 +20,4 @@ help:
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
 rst:
-	sphinx-apidoc -f -o . ..
+	sphinx-apidoc -f -o . ../geco
